<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cz.metacentrum</groupId>
    <artifactId>accounting-parent</artifactId>
    <packaging>pom</packaging>

    <!--
    Use "mvn versions:set -DnewVersion=3.31; mvn versions:commit" to change version in all modules
     -->
    <version>3.30</version>
    <name>MetaCentrum Accounting Parent Project</name>

    <properties>
        <java.version>17</java.version>
        <taglibs-standard.version>1.2.5</taglibs-standard.version>
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <!-- defines compatible versions of many libraries -->
    <!-- see https://docs.spring.io/spring-boot/docs/current/reference/html/using-boot-build-systems.html#using-boot-maven-parent-pom -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.16</version>
    </parent>

    <!-- specifies versions not defined by the Spring platform-bom -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.10.0</version>
            </dependency>
            <dependency>
                <groupId>net.sourceforge.stripes</groupId>
                <artifactId>stripes</artifactId>
                <version>1.5.8</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>2.12.5</version>
            </dependency>
            <dependency>
                <groupId>com.github.hazendaz</groupId>
                <artifactId>displaytag</artifactId>
                <version>2.4.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>cloud</module><!-- API for MetaCentrum cloud state -->
        <module>perun_machines</module><!-- API for reading JSON data about physical machines from Perun -->
        <module>pbsmon</module><!-- PBSMon - web app showing the state of MetaCentrum -->
        <module>metaacct</module><!-- Accounting server for MetaCentrum -->
        <module>metaacct_cmd</module><!-- Command Line Tools for MetaCentrum Accounting -->
    </modules>
</project>
